# pricing_app

./: MANIFEST.in  README.md  pyproject.toml  setup.py
pricing_calculator/: api.py  hooks.py  modules.txt
pricing_calculator/config/: desktop.py
pricing_calculator/constants/: pricing_data.csv
pricing_calculator/doctype/: __init__.py
pricing_calculator/doctype/calculated_quote/: calculated_quote.json  calculated_quote.py
pricing_calculator/doctype/pricing_formula/: pricing_formula.json  pricing_formula.py
pricing_calculator/doctype/pricing_item/: pricing_item.json  pricing_item.py
pricing_calculator/page/: __init__.py
pricing_calculator/page/price_calculator/: __init__.py  price_calculator.html  price_calculator.js  price_calculator.json  price_calculator.py
pricing_calculator/pricing_calculator/: __init__.py  patches.txt
pricing_calculator/public/: __init__.py
pricing_calculator/public/js/: calculated_quote.js
pricing_calculator/utils/: pricing_dataset.py  pricing_engine.py
pricing_calculator/workspace/: __init__.py
pricing_calculator/workspace/pricing_calculator/: __init__.py  pricing_calculator.json
