[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing_calculator"
version = "0.0.1"
description = "Pricing Calculator for Frappe/ERPNext"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pricing Calculator Team", email = "support@example.com" }]
requires-python = ">=3.10"
dependencies = ["frappe"]

[project.urls]
Homepage = "https://example.com/pricing-calculator"
Source = "https://example.com/pricing-calculator"

